add pasta assets add file home.css e htmls secao projetos

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/home.css">
 
     <title>Home | Núcleo Angela Martin Bassetto</title>
 </head>
@@ -30,7 +31,53 @@
 
     </section>
 
+    <!-- SEÇÃO PROJETOS  -->
     <section id="projetos">
+
+        <div class="titulo-section-projetos">
+            <h1>Nossos Projetos</h1>
+        </div>
+
+        <!-- PROJETOS DESENVOLVIDOS  -->
+
+        <div class="project-colonia-de-ferias">
+
+            <h3 class="title-colonia-de-ferias">Colônia de Férias</h3>
+
+            <img src="./assets/projeto-colonia-de-ferias.svg" alt="projeto-colonia-de-ferias" class="img-colonia">
+
+            <p class="text-project-colonia-de-ferias">
+                O Núcleo de Atendimento Social "Ângela Martin Bassetto" <br>
+                realizou a "Colônia de Férias" durante o mês de janeiro. <br>
+                A colônia ocorreu no período da tarde e foi destinada a todas <br>
+                as crianças atendidas pelo serviço. Durante esse período, <br>
+                foi oferecida uma alimentação saudável e diversificada, além de <br>
+                uma programação com várias atividades recreativas para <br> 
+                que as crianças pudessem aproveitar o período de férias <br>
+                escolares em um ambiente seguro e agradável.
+            </p>
+
+            <button class="botao-apoie-colonia">APOIE</button>
+
+        </div>
+         
+        <div class="project-aniversariante-do-mes">
+
+            <h3 class="title-aniversariante-do-mes">Aniversariante do Mês</h3>
+
+            <img src="./assets/projeto-aniversariante-do-mes.svg" alt="projeto-aniversariante-do-mes" class="img-aniversario">
+
+            <p class="text-aniversariante-do-mes">
+                O projeto "Anivesariante do Mês" é uma iniciativa do Núcleo <br>
+                de Atendimento Social "Ângela Martin Bassetto" com o <br> 
+                propósito de promover acolhimento para comemorar os <br> 
+                anivesariantes do mês. O objetivo principal é proporcionar <br> 
+                um aniversário mais feliz e digno para aqueles que mais precisam.
+            </p>
+
+            <button class="botao-apoie-aniversario">APOIE</button>
+
+        </div> 
 
     </section>
 
