task Home: Importancia - correcao de texto

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
             <div class="card-vertical">
                 <img src="./assets/food-icon.png" alt="Ícone de talheres">
-                <h4>Público Atendido</h4>
+                <h4>Alimentação</h4>
                 <hr>
                 <p>
                     Todos os dias, são oferecidos café da manhã,
