--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/projetos.css">
     <link rel="stylesheet" href="styles/importancia.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/footer.css">
@@ -99,11 +99,11 @@
 
         <div class="project-colonia-de-ferias">
 
-            <h3 class="title-colonia-de-ferias">Colônia de Férias</h3>
+            <h3 id="project-title" class="title-colonia-de-ferias">Colônia de Férias</h3>
 
             <img src="./assets/projeto-colonia-de-ferias.svg" alt="projeto-colonia-de-ferias" class="img-colonia">
 
-            <p class="text-project-colonia-de-ferias">
+            <p id="project-descricao" class="text-project-colonia-de-ferias">
                 O Núcleo de Atendimento Social "Ângela Martin Bassetto" <br>
                 realizou a "Colônia de Férias" durante o mês de janeiro. <br>
                 A colônia ocorreu no período da tarde e foi destinada a todas <br>
@@ -114,18 +114,20 @@
                 escolares em um ambiente seguro e agradável.
             </p>
 
-            <button class="botao-apoie-colonia">APOIE</button>
+            <a href="" >
+                <button class="botao-apoie-colonia">APOIE</button>
+            </a>
 
         </div>
 
         <div class="project-aniversariante-do-mes">
 
-            <h3 class="title-aniversariante-do-mes">Aniversariante do Mês</h3>
+            <h3 id="project-title" class="title-aniversariante-do-mes">Aniversariante do Mês</h3>
 
             <img src="./assets/projeto-aniversariante-do-mes.svg" alt="projeto-aniversariante-do-mes"
                 class="img-aniversario">
 
-            <p class="text-aniversariante-do-mes">
+            <p id="project-descricao" class="text-aniversariante-do-mes">
                 O projeto "Anivesariante do Mês" é uma iniciativa do Núcleo <br>
                 de Atendimento Social "Ângela Martin Bassetto" com o <br>
                 propósito de promover acolhimento para comemorar os <br>
@@ -133,7 +135,9 @@
                 um aniversário mais feliz e digno para aqueles que mais precisam.
             </p>
 
-            <button class="botao-apoie-aniversario">APOIE</button>
+            <a href="" >
+                <button class="botao-apoie-aniversario">APOIE</button>
+            </a>
 
         </div>
 
