Taks: pag Como Ajudar

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <a href="#">Quem Somos</a>
                 </li>
                 <li>
-                    <a href="#">Como Ajudar</a>
+                    <a href="./pages/como_ajudar.html">Como Ajudar</a>
                 </li>
                 <li>
                     <a href="#">Transparência</a>
@@ -78,7 +78,7 @@
                     vivência familiar, comunitária e social e o
                     desenvolvimento de autonomia.
                 </p>
-                <a href="" class="botao-primario">
+                <a href="./pages/como_ajudar.html" class="botao-primario">
                     <button>
                         SABER MAIS
                     </button>
@@ -119,7 +119,6 @@
         <h2>Nossos Projetos</h2>
 
         <!-- PROJETOS DESENVOLVIDOS  -->
-
         <div class="project-colonia-de-ferias">
 
             <h3 id="project-title" class="title-colonia-de-ferias">Colônia de Férias</h3>
