Task: page Como Ajudar | conteudo + card + imagens

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a href="#">Transparência</a>
                 </li>
                 <li>
-                    <a href="" class="botao-primario" id="button">
+                    <a href="./pages/como_ajudar.html" class="botao-primario" id="button">
                         <button>
                             DOAR
                         </button>
