corrigindo errin ao linkar os botoes da page Como Ajudar

--- a/pages/como_ajudar.html
+++ b/pages/como_ajudar.html
@@ -65,13 +65,13 @@
             Sua doação poderá ser deduzida no imposto de renda.
         </p>
 
-        <a href="/">
+        <a href="">
             <button class="botao-contribuinte">
                Seja um sócio contribuinte!
             </button>
         </a>
 
-        <a href="/" class="botao-secundario" id="button">
+        <a href="" class="botao-secundario" id="button">
             <button>
                Seja uma empresa parceira!
             </button>
@@ -115,7 +115,7 @@
         </div>
         
         <div>
-            <a href="/" class="botao-secundario" id="button">
+            <a href="" class="botao-secundario" id="button">
                 <button>
                    Fale conosco
                 </button>
