Task-Como Ajudar | diposição dos itens + link dos contatos

--- a/pages/como_ajudar.html
+++ b/pages/como_ajudar.html
@@ -40,13 +40,13 @@
                     <a href="#">Quem Somos</a>
                 </li>
                 <li>
-                    <a hhref="/" class="active">Como Ajudar</a>
+                    <a hhref="" class="active">Como Ajudar</a>
                 </li>
                 <li>
                     <a href="#">Transparência</a>
                 </li>
                 <li>
-                    <a href="/" class="botao-primario" id="button">
+                    <a href="" class="botao-primario" id="button">
                         <button>
                             DOAR
                         </button>
@@ -85,7 +85,8 @@
         <div id="doacoes-conteudo">
             <img src="../assets/dados bancarios.svg" alt="Dados bancarios">
             <img src="../assets/imagem-doacoes.svg" alt="Sala com mesas e cadeiras">
-
+        </div>
+        <div>
             <h4>Como doar?</h4>
 
             <p>
@@ -111,13 +112,18 @@
             </div>
             
             <div class="meios-de-contatos">
-                Telefone | <strong>(14) 38441213 </strong><br>
+                Telefone | <strong>(14) 3844-1213 </strong><br>
+                WhatsApp | <strong>(14) 99174-8235</strong><br>
                 E-mail | <strong>crecheamb@prata.net.br</strong><br>
-                Facebook | <strong>Núcleo Angela Martin</strong><br>
+                ou <strong>nucleoamb@outlook.com</strong><br>
+
+                Facebook | <a href="https://www.facebook.com/nucleoangelamartin/" target="_blank">
+                <strong>Núcleo Angela Martin</strong><br>
+                </a>
             </div>
             
             <div>
-                <a href="" class="botao-secundario" id="button">
+                <a href="https://api.whatsapp.com/send?phone=5514991748235" target="_blank" class="botao-secundario" id="button">
                     <button>
                        Fale conosco
                     </button>
