Task-Como Ajudar | linkagem interna botoes da pagina

--- a/pages/como_ajudar.html
+++ b/pages/como_ajudar.html
@@ -46,7 +46,7 @@
                     <a href="#">Transparência</a>
                 </li>
                 <li>
-                    <a href="" class="botao-primario" id="button">
+                    <a href="#doacoes" class="botao-primario" id="button">
                         <button>
                             DOAR
                         </button>
@@ -66,13 +66,13 @@
         </p>
 
         <div>
-            <a href="">
+            <a href="#doacoes">
                 <button class="botao-contribuinte">
                    Seja um sócio contribuinte!
                 </button>
             </a>
         
-            <a href="" class="botao-secundario" id="button">
+            <a href="#empresas-parceiras" class="botao-secundario" id="button">
                 <button>
                    Seja uma empresa parceira!
                 </button>
