Home: Parcerias - cards horizontais responsivos

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="card-vertical">
                 <img src="./assets/people-icon.png" alt="Ícone de pessoa acenando">
                 <h4>Público Atendido</h4>
-                <span class="linha-horizontal"></span>
+                <span class="linha"></span>
                 <p>
                     Diariamente, são atendidas 80 crianças na faixa
                     etária de 06 a 12 anos sem distinção de
@@ -106,7 +106,7 @@
             <div class="card-vertical">
                 <img src="./assets/food-icon.png" alt="Ícone de talheres">
                 <h4>Alimentação</h4>
-                <span class="linha-horizontal"></span>
+                <span class="linha"></span>
                 <p>
                     Todos os dias, são oferecidos café da manhã,
                     almoço e lanche da tarde. Nas festividades
@@ -122,20 +122,20 @@
         <h2>Parcerias</h2>
         <p>Nossos parceiros de órgãos não governamentais</p>
 
-        <div>
 
+        <div>
             <div class="card-horizontal">
                 <div>
                     <img src="assets/enterprise.png" alt="Ícone de empresa">
                     <h4>Empresa Parceira</h4>
                 </div>
-                <span class="linha-vertical"></span>
+                <span class="linha"></span>
                 <p>
                     Aliquam erat volutpat. Vivamus fringilla interdum mauris eu gravida. Nullam gravida varius felis dapibus
                     porttitor. Etiam at consequat ligula. Integer ultrices hendrerit libero eu feugiat. Mauris in lorem
                     odio.
                 </p>
-                <span class="linha-vertical"></span>
+                <span class="linha"></span>
                 <a href="./pages/como_ajudar.html" class="botao-secundario">
                     <button>
                         Me tornar parceira
@@ -148,14 +148,14 @@
                     <img src="assets/partnership.png" alt="Ícone de parceiro">
                     <h4>Sócio Contribuinte</h4>
                 </div>
-                <span class="linha-vertical"></span>
+                <span class="linha"></span>
                 <p>
                     Através de doações mensais você ajudará na manutenção do trabalho
                     desenvolvido pelo Núcleo de Atendimento
                     Social "Angela Martin Basseto". E sua doação
                     poderá ser deduzida no imposto de renda.
                 </p>
-                <span class="linha-vertical"></span>
+                <span class="linha"></span>
                 <a href="./pages/como_ajudar.html" class="botao-secundario">
                     <button>
                         Me tornar sócio
