Section Projetos | agora pode adicionar coisa embaixo

--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
     </section>
 
     <section id="parcerias" class="secao">
-
+        <h2>Parcerias</h2>
+        
     </section>
 
     <script src="scripts/header.js"></script>
