Seção Projetos: card horizontal | Page Quem Somos: estrutura html + css | Page Transparencia: add header e links

--- a/pages/como_ajudar.html
+++ b/pages/como_ajudar.html
@@ -37,13 +37,13 @@
                     <a href="../index.html">Home</a>
                 </li>
                 <li>
-                    <a href="#">Quem Somos</a>
+                    <a href="./quem_somos.html">Quem Somos</a>
                 </li>
                 <li>
-                    <a hhref="" class="active">Como Ajudar</a>
+                    <a href="" class="active">Como Ajudar</a>
                 </li>
                 <li>
-                    <a href="#">Transparência</a>
+                    <a href="./transparencia.html">Transparência</a>
                 </li>
                 <li>
                     <a href="#doacoes" class="botao-primario" id="button">
@@ -105,23 +105,25 @@
     </section>
 
     <section id="contato">
-        <div class="contato-card">
+        <div class="card-horizontal">
             <div>
                 <img src="../assets/telefone-icon.png" alt="telefone-contato">
-                <h5>Contato</h5>
+                <h4>Contato</h4>
             </div>
-            
-            <div class="meios-de-contatos">
-                Telefone | <strong>(14) 3844-1213 </strong><br>
-                WhatsApp | <strong>(14) 99174-8235</strong><br>
-                E-mail | <strong>crecheamb@prata.net.br</strong><br>
-                ou <strong>nucleoamb@outlook.com</strong><br>
-
-                Facebook | <a href="https://www.facebook.com/nucleoangelamartin/" target="_blank">
-                <strong>Núcleo Angela Martin</strong><br>
-                </a>
-            </div>
-            
+            <span class="linha"></span>
+            <ul class="meios-de-contatos">
+                <li>Telefone | <strong>(14) 3844-1213 </strong></li>
+                <li>WhatsApp | <strong>(14) 99174-8235</strong></li>
+                <li>
+                    Facebook | <a href="https://www.facebook.com/nucleoangelamartin/" target="_blank">
+                    <strong>Núcleo Angela Martin</strong></a>
+                </li>
+                <li>
+                    E-mail | <strong>crecheamb@prata.net.br</strong>
+                    ou <strong>nucleoamb@outlook.com</strong>
+                </li>
+            </ul>
+            <span class="linha"></span>
             <div>
                 <a href="https://api.whatsapp.com/send?phone=5514991748235" target="_blank" class="botao-secundario" id="button">
                     <button>
