--- a/pages/transparencia.html
+++ b/pages/transparencia.html
@@ -12,22 +12,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/home/importancia.css">
-    <link rel="stylesheet" href="styles/home/projetos.css">
-    <link rel="stylesheet" href="styles/home/parcerias.css">
-    <link rel="stylesheet" href="styles/header.css">
-    <link rel="stylesheet" href="styles/footer.css">
-    <link rel="shortcut icon" type="imagex/svg" href="./assets/logo-cor3.svg">
+     <link rel="stylesheet" href="../styles/global.css">
+    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../styles/transparencia.css">
+    <link rel="shortcut icon" type="imagex/svg" href="../assets/logo-cor3.svg">
 
 
-    <title>Home | Núcleo Angela Martin Bassetto</title>
+    <title>Transparência | Núcleo Angela Martin Bassetto</title>
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <img href="/" src="./assets/logo-texto-cor1.svg"
+            <img href="/" src="../assets/logo-texto-cor1.svg"
                 alt="uma flor com uma menina e um menino no lado esquerdo e um coração no canto superior direito">
         </div>
         <div class="hamburger">
@@ -38,19 +36,19 @@
         <nav class="menu">
             <ul>
                 <li>
-                    <a href="/" class="active">Home</a>
+                    <a href="../index.html">Home</a>
                 </li>
                 <li>
-                    <a href="#">Quem Somos</a>
+                    <a href="./quem_somos.html">Quem Somos</a>
                 </li>
                 <li>
-                    <a href="./pages/como_ajudar.html">Como Ajudar</a>
+                    <a href="./como_ajudar.html">Como Ajudar</a>
                 </li>
                 <li>
-                    <a href="#">Transparência</a>
+                    <a href="" class="active">Transparência</a>
                 </li>
                 <li>
-                    <a href="./pages/como_ajudar.html" class="botao-primario" id="button">
+                    <a href="./como_ajudar.html" class="botao-primario" id="button">
                         <button>
                             DOAR
                         </button>
