--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                     <a href="/" class="active">Home</a>
                 </li>
                 <li>
-                    <a href="#">Quem Somos</a>
+                    <a href="./pages/quem_somos.html">Quem Somos</a>
                 </li>
                 <li>
                     <a href="./pages/como_ajudar.html">Como Ajudar</a>
                 </li>
                 <li>
-                    <a href="#">Transparência</a>
+                    <a href="./pages/transparencia.html">Transparência</a>
                 </li>
                 <li>
                     <a href="./pages/como_ajudar.html" class="botao-primario" id="button">
