--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;800&family=Roboto:wght@400;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;800&family=Roboto:wght@400;700&display=swap"
         rel="stylesheet">
 
     <meta charset="UTF-8">
@@ -63,14 +63,13 @@
 
     <!-- SEÇÃO HERO -->
     <section id="hero" class="secao">
-        <div class="content">
-            <div class="titulo">
-                <h1><span>NÚCLEO DE ATENDIMENTO SOCIAL</span></br> "Angela Martin Basseto"</h1>
-            </div>
-            <div class="descricao">
-                <p>Intervenções pautadas em <strong>experiências lúdicas</strong>, <strong>culturais</strong> e <strong>esportivas</strong> como forma de <strong>expressão</strong>,
-                <strong>interação</strong>,<strong> aprendizagem</strong>,<strong> sociabilidade</strong> e <strong>proteção social</strong>.</p>
-            </div>
+        <div class="container">
+            <h1><span>NÚCLEO DE ATENDIMENTO SOCIAL</span></br> "Angela Martin Basseto"</h1>
+            <p>Intervenções pautadas em <strong>experiências lúdicas</strong>, <strong>culturais</strong> e
+                <strong>esportivas</strong> como forma de <strong>expressão</strong>,
+                <strong>interação</strong>,<strong> aprendizagem</strong>,<strong> sociabilidade</strong> e <strong>proteção
+                    social</strong>.
+            </p>
             <a href="./pages/como_ajudar.html" class="botao-secundario">
                 <button id="button-hero">
                     Quero Ajudar!
@@ -238,7 +237,39 @@
 
     </section>
 
+    <footer>
+        <div id="logo-footer">
+            <img src="./assets/logo-texto-cor2.svg" alt="uma flor com uma menina e um menino no lado esquerdo e um coração no canto superior direito">
+        </div>
+        <nav class="menu-footer">
+            <h3>Links rápidos</h3>
+            <ul>
+                <li>
+                    <a href="/" class="active">Home</a>
+                </li>
+                <li>
+                    <a href="./pages/quem_somos.html">Quem Somos</a>
+                </li>
+                <li>
+                    <a href="./pages/como_ajudar.html">Como Ajudar</a>
+                </li>
+                <li>
+                    <a href="./pages/transparencia.html">Transparência</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="info-footer">
+            <h3>Informações de contato:</h3>
+            <p>Rua Capitão João Batista, n 224</br> Bairro: Centro - CEP: 18.660-026 - Pratânia - SP</p>
+            <div class="social-logo">
+                <img src="./assets/icone-ig.svg" alt="logo do instagram">
+                <img src="./assets/icone-fb.svg" alt="logo do facebook">
+            </div>
+        </div>
+    </footer>
+
     <script src="scripts/header.js"></script>
+    <script src="scripts/footer.js"></script>
 </body>
 
 </html>
