--- a/pages/como_ajudar.html
+++ b/pages/como_ajudar.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../styles/global.css">
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/footer.css">
-    <link rel="stylesheet" href="../styles/como_ajudar.css">
+    <link rel="stylesheet" href="../styles/como-ajudar/como_ajudar.css">
 
     <link rel="shortcut icon" type="imagex/svg" href="../assets/logo-cor3.svg">
     <title>Como Ajudar | Núcleo Angela Martin Bassetto</title>
