--- a/pages/quem_somos.html
+++ b/pages/quem_somos.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../styles/global.css">
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/footer.css">
-    <link rel="stylesheet" href="../styles/quem_somos.css">
+    <link rel="stylesheet" href="../styles/quem-somos/quem_somos.css">
 
     <link rel="shortcut icon" type="imagex/svg" href="../assets/logo-cor3.svg">
     <title>Quem Somos | Núcleo Angela Martin Bassetto</title>
