--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
             <h1><span>NÚCLEO DE ATENDIMENTO SOCIAL</span></br> "Angela Martin Basseto"</h1>
             <p>Intervenções pautadas em <strong>experiências lúdicas</strong>, <strong>culturais</strong> e
                 <strong>esportivas</strong> como forma de <strong>expressão</strong>,
-                <strong>interação</strong>,<strong> aprendizagem</strong>,<strong> sociabilidade</strong> e <strong>proteção
+                <strong>interação</strong>,<strong> aprendizagem</strong>,<strong> sociabilidade</strong> e
+                <strong>proteção
                     social</strong>.
             </p>
             <a href="./pages/como_ajudar.html" class="botao-secundario">
@@ -187,13 +188,9 @@
 
     <!-- SEÇÃO PROJETOS  -->
     <section id="projetos" class="secao">
-
         <h2>Nossos Projetos</h2>
-
         <div id="projetos-conteudo">
-
             <img src="./assets/projeto-colonia-de-ferias.svg" alt="projeto-colonia-de-ferias">
-
             <div>
                 <h3>Colônia de Férias</h3>
 
@@ -207,12 +204,12 @@
                     que as crianças pudessem aproveitar o período de férias <br>
                     escolares em um ambiente seguro e agradável.
                 </p>
-
                 <a href="./pages/como_ajudar.html">
                     <button class="botao-apoie-colonia">APOIE</button>
                 </a>
             </div>
-
+        </div>
+        <div id="projetos-conteudo">
             <div>
                 <h3>Aniversariante do Mês</h3>
                 <p>
@@ -222,12 +219,10 @@
                     anivesariantes do mês. O objetivo principal é proporcionar <br>
                     um aniversário mais feliz e digno para aqueles que mais precisam.
                 </p>
-
                 <a href="./pages/como_ajudar.html">
                     <button class="botao-apoie-aniversario">APOIE</button>
                 </a>
             </div>
-
             <img src="./assets/projeto-aniversariante-do-mes.svg" alt="projeto-aniversariante-do-mes">
         </div>
     </section>
@@ -239,7 +234,8 @@
 
     <footer>
         <div id="logo-footer">
-            <img src="./assets/logo-texto-cor2.svg" alt="uma flor com uma menina e um menino no lado esquerdo e um coração no canto superior direito">
+            <img src="./assets/logo-texto-cor2.svg"
+                alt="uma flor com uma menina e um menino no lado esquerdo e um coração no canto superior direito">
         </div>
         <nav class="menu-footer">
             <h3>Links rápidos</h3>
