--- a/pages/quem_somos.html
+++ b/pages/quem_somos.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/footer.css">
     <link rel="stylesheet" href="../styles/quem-somos/quem_somos.css">
+    <link rel="stylesheet" href="../styles/quem-somos/equipe.css">
 
     <link rel="shortcut icon" type="imagex/svg" href="../assets/logo-cor3.svg">
     <title>Quem Somos | Núcleo Angela Martin Bassetto</title>
@@ -64,8 +65,133 @@
         <h2>Missão</h2>
     </section>    
 
+    <!-- SEÇÃO EQUIPE -->
     <section id="equipe">
         <h2>Equipe</h2>
+        <p>
+            Maecenas libero elit, euismod id eleifend sed, blandit a metus. Interdum et  alesuada fames ac ante ipsum primis in faucibus. Suspendisse eleifend eu justo id eleifend.
+        </p>
+
+        <div>
+            <h3>Recursos Humanos</h3>
+            <div>
+                <div class="card-equipe">
+                    <p>Assistente Social</p>
+                    <p>Maria Eduarda Biodan Vassoler</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Psicóloga</p>
+                    <p>Maria Matilde Assumpção Antunes</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Auxiliar Administrativo</p>
+                    <p>Marcela Cristina Lopes Claes</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Monitora</p>
+                    <p>Evelyn Maria dos Santos Siqueira</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Monitora</p>
+                    <p>Silmara Cristina Trevsiso</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Equipe de Apoio</p>
+                    <p>Joseane Nunes</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Equipe de Apoio</p>
+                    <p>Josiane Lima da Silva</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Equipe de Apoio</p>
+                    <p>Marilda Aparecida Rodrigues</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Equipe de Apoio</p>
+                    <p>Marilda Aparecida Rodrigues</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Equipe de Apoio</p>
+                    <p>Maria Elena Ribeiro</p>
+                </div>
+
+            </div>
+
+            <h3>Diretores</h3>
+            <div>
+                <div class="card-equipe">
+                    <p>Presidente</p>
+                    <p>Paulo Egydio Quessada</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Vice-Presidente</p>
+                    <p>Mário Augusto Maion</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Tesoureiro</p>
+                    <p>Dalzija Cristina Bassetto</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Tesoureiro</p>
+                    <p>Marcelina Quessada Gimenez</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Secretário</p>
+                    <p>Silmara Cristiane Basseto</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Secretário</p>
+                    <p>Benedito Matheus Bassetto</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Conselho Fiscal</p>
+                    <p>Abilio Paschoalinotte</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Conselho Fiscal</p>
+                    <p>Abilio Paschoalinotte Junior</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Conselho Fiscal</p>
+                    <p>Marcio Guilherme Pavanelli Tiengo</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Suplente</p>
+                    <p>José Mateus Maion</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Suplente</p>
+                    <p>Jozimar Antonio Anibal</p>
+                </div>
+
+                <div class="card-equipe">
+                    <p>Suplente</p>
+                    <p>Ivanilda Duarte Bassetto</p>
+                </div>
+            </div>
+        </div>
+
+        
     </section>
 
     <section id="historia">
