Quem Somos: Missão e Trabalho - seção pronta e responsiva

--- a/pages/quem_somos.html
+++ b/pages/quem_somos.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/footer.css">
     <link rel="stylesheet" href="../styles/quem-somos/quem_somos.css">
+    <link rel="stylesheet" href="../styles/quem-somos/missao_trabalho.css">
     <link rel="stylesheet" href="../styles/quem-somos/equipe.css">
 
     <link rel="shortcut icon" type="imagex/svg" href="../assets/logo-cor3.svg">
@@ -61,8 +62,27 @@
         <h1>Quem somo nós?</h1>
     </section>
 
-    <section id="missao">
-        <h2>Missão</h2>
+    <section id="missao-trabalho">
+        <div>
+            <div>
+                <h2>Missão</h2>
+                <p>
+                    Promover o desenvolvimento das potencialidades das crianças e adolescentes, bem como o fortalecimento de vínculos familiares e comunitários.
+                </p>
+            </div>
+
+            <img src="../assets/missao.svg" alt="Foto crianças com banner do Núcleo de Atendimento Social 'Angela Martin Bassettto'">
+        </div>
+        <div>
+            <img src="../assets/trabalho.svg" alt="Foto crianças brincando de cabo de guerra">
+
+            <div>
+                <h2>Trabalho</h2>
+                <p>
+                    O trabalho é realizado em quatro grupos: dois grupos, para atender a faixa etária de 06 a 8 anos e dois grupos, para atender a faixa etária de 9 a 12 anos, através de Oficinas de Artes Manuais, Grupos Temáticos, Atividades Recreativas Direcionadas, Informática e Atividades de Esporte e Lazer
+                </p>
+            </div>
+        </div>
     </section>    
 
     <!-- SEÇÃO EQUIPE -->
