--- a/pages/como_ajudar.html
+++ b/pages/como_ajudar.html
@@ -133,5 +133,11 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        
+    </footer>
+
+    <script src="../scripts/header.js"></script>
 </body>
 </html>
