--- a/pages/quem_somos.html
+++ b/pages/quem_somos.html
@@ -217,5 +217,11 @@
     <section id="historia">
         <h2>História</h2>
     </section>
+
+    <footer>
+        
+    </footer>
+
+    <script src="../scripts/header.js"></script>
 </body>
 </html>
