Transparencia | Responsividade corrigida

--- a/pages/transparencia.html
+++ b/pages/transparencia.html
@@ -58,23 +58,22 @@
         </nav>
     </header>
 
-    <section>
+    <section id="transparencia">
         <h1>Transparência</h1>
-        <div>
-            <p>
-                É importante ressaltar que, como parte de nossa política de transparência, 
-                garantimos que todas as doações sejam utilizadas exclusivamente para a 
-                manutenção e aprimoramento dos serviços oferecidos pelo núcleo. 
-                A prestação de contas é uma prioridade para nós, e estamos sempre prontos 
-                para fornecer informações detalhadas sobre como os recursos são aplicados.
-            </p>
+        
+        <p>
+            É importante ressaltar que, como parte de nossa política de transparência, 
+            garantimos que todas as doações sejam utilizadas exclusivamente para a 
+            manutenção e aprimoramento dos serviços oferecidos pelo núcleo. 
+            A prestação de contas é uma prioridade para nós, e estamos sempre prontos 
+            para fornecer informações detalhadas sobre como os recursos são aplicados.
+        </p>
 
-            <a href="">
-                <button class="transparencia-botao">
-                    Acessar transparência
-                </button>
-            </a>
-        </div>
+        <a href="">
+            <button class="transparencia-botao">
+                Acessar transparência
+            </button>
+        </a>
     </section>
 
     <footer>
