Como-Ajudar | Hero: correção da responsividade

--- a/pages/como_ajudar.html
+++ b/pages/como_ajudar.html
@@ -57,11 +57,11 @@
     </header>
 
     <section id="hero">
-        <h1>Como Ajudar</h1>
+        <h1>Como Ajudar?</h1>
 
         <p>
-            Através de doações mensais você estará ajudando na manutenção do trabalho <br>
-            desenvolvido pelo Núcleo de Atendimento Social "Angela Martin Basseto". <br>
+            Através de doações mensais você estará ajudando na manutenção do trabalho 
+            desenvolvido pelo Núcleo de Atendimento Social "Angela Martin Basseto". 
             Sua doação poderá ser deduzida no imposto de renda.
         </p>
 
