Home:Projetos | Responsividade textos e botoes

--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
                 </p>
 
                 <a href="./pages/como_ajudar.html">
-                    <button class="botao-apoie-colonia">APOIE</button>
+                    <button class="botao-apoie-colonia">
+                        APOIE
+                    </button>
                 </a>
             </div>
 
@@ -156,7 +158,9 @@
                 </p>
 
                 <a href="./pages/como_ajudar.html">
-                    <button class="botao-apoie-aniversario">APOIE</button>
+                    <button class="botao-apoie-aniversario">
+                        APOIE
+                    </button>
                 </a>
             </div>
 
