Como Ajudar | Doações: texto sobre como doar adicionado

--- a/pages/como_ajudar.html
+++ b/pages/como_ajudar.html
@@ -90,7 +90,26 @@
             <h4>Como doar?</h4>
 
             <p>
-                text
+                Contribuições financeiras ao Núcleo podem ser realizadas tanto por depósito ou transferência bancaria 
+                por meio das informações disponibilizados nos dados bancário, quanto por PIX através da chave pix.
+            </p>
+            <h4 style="text-align: center;">
+                Doação através do Programa Nota fiscal Paulista da Secretaria da Fazenda do Estado de São Paulo.
+            </h4>
+            <p>              
+                Você sabia que pode ajudar na manutenção do Núcleo de Atendimento Social, doando seus cupons fiscais? 
+                A Doação pode ser automática, basta fazer o login no sistema por meio do aplicativo da Nota Fiscal Paulista, 
+                para smartphones ou <a href="https://portal.fazenda.sp.gov.br/servicos/nfp/" target="_blank">clique aqui</a>
+                para ir ao site e selecionar a opção “Doação Automática Com CPF”. 
+
+                Após o cadastro, informando seu CPF, cupons fiscais de suas compras serão destinados automaticamente ao Núcleo. 
+                Dessa forma, além de ajudar na manutenção você e a OSC concorrem a sorteios exclusivos!
+                <a href="https://portal.fazenda.sp.gov.br/Videos/Paginas/Nota-Fiscal-Paulista---Doa%C3%A7%C3%A3o-Autom%C3%A1tica-de-Cupons.aspx#:~:text=Para%20ativar%20a%20op%C3%A7%C3%A3o%2C%20basta,o%20per%C3%ADodo%20que%20deseja%20doar " target="_blank">
+                Saiba mais.</a>
+            </p>
+            <p style="text-align: center;">
+               Caso haja dúvidas, <a href="https://youtu.be/RDKe9ODRt4E" target="_blank">clique aqui</a> 
+               para assistir um vídeo sobre como doar nota fiscal as Organizações sem fins lucrativos
             </p>
         </div>
     </section>    
