--- a/pages/como_ajudar.html
+++ b/pages/como_ajudar.html
@@ -86,14 +86,16 @@
             <img src="../assets/dados bancarios.svg" alt="Dados bancarios">
             <img src="../assets/imagem-doacoes.svg" alt="Sala com mesas e cadeiras">
         </div>
-        <div>
+        <div id="doacoes-como-doar">
             <h4>Como doar?</h4>
-
             <p>
                 Contribuições financeiras ao Núcleo podem ser realizadas tanto por depósito ou transferência bancaria 
                 por meio das informações disponibilizados nos dados bancário, quanto por PIX através da chave pix.
             </p>
-            <h4 style="text-align: center;">
+        </div>
+
+        <div id="doacoes-programa-nota-fiscal">
+            <h4>
                 Doação através do Programa Nota fiscal Paulista da Secretaria da Fazenda do Estado de São Paulo.
             </h4>
             <p>              
@@ -106,10 +108,34 @@
                 Dessa forma, além de ajudar na manutenção você e a OSC concorrem a sorteios exclusivos!
                 <a href="https://portal.fazenda.sp.gov.br/Videos/Paginas/Nota-Fiscal-Paulista---Doa%C3%A7%C3%A3o-Autom%C3%A1tica-de-Cupons.aspx#:~:text=Para%20ativar%20a%20op%C3%A7%C3%A3o%2C%20basta,o%20per%C3%ADodo%20que%20deseja%20doar " target="_blank">
                 Saiba mais.</a>
+
+                <br>
+                Caso haja dúvidas, <a href="https://youtu.be/RDKe9ODRt4E" target="_blank">clique aqui</a> 
+                para assistir um vídeo sobre como doar nota fiscal as Organizações sem fins lucrativos
             </p>
-            <p style="text-align: center;">
-               Caso haja dúvidas, <a href="https://youtu.be/RDKe9ODRt4E" target="_blank">clique aqui</a> 
-               para assistir um vídeo sobre como doar nota fiscal as Organizações sem fins lucrativos
+        </div>
+
+        <div id="doacoes-imposto-de-renda">
+            <h4>
+                Doação de parte do Imposto de Renda - Saiba como fazer e como deduzir
+            </h4>
+            <p>
+                A Campanha “Eu Sou Cidadão Solidário”, da Receita Federal, incentiva doações a projetos sociais e culturais dos municípios brasileiros.
+                A destinação de parte da restituição do Imposto de Renda é uma forma legal e segura de ajudar e incentivar projetos sociais e culturais do país,
+                estimulando a proteção às crianças, adolescentes e idosos, além de fomentar atividades culturais, audiovisuais e desportivas. 
+            </p>
+            <h4>Como funciona:</h4>
+            <ul>
+                <li>- Incide um valor Sobre a renda chamado de Imposto Devido, que será pago sob a forma de Imposto de Renda Retido na Fonte (IRRF).</li>
+                <li>- Pode-se doar até 6% do valor de IRRF a Organizações da Sociedade Civil registradas no Conselho dos Direitos da Criança e do Adolescente.</li>
+                <li>- As doações podem ser feitas ao longo do ano e informadas no momento da declaração.</li>
+                <li>- Lembrando que é fundamental ter os comprovantes de depósito ou recibos para comprovar.</li>
+                <li>- Pessoa física pode escolher retirar o valor que será doado do imposto devido à Receita Federal ou da quantia a ser restituída.</li>
+            </ul>
+            <p>
+                <a href="https://www.gov.br/fazenda/pt-br/assuntos/noticias/2023/marco/contribuintes-podem-destinar-parte-do-imposto-de-renda-a-projetos-sociais#:~:text=O%20servidor%20da%20Receita%20Federal,e%20adolescentes%2C%20e%20idosos">
+                    Saiba mais
+                </a>
             </p>
         </div>
     </section>    
