--- a/pages/quem_somos.html
+++ b/pages/quem_somos.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../styles/quem-somos/quem_somos.css">
     <link rel="stylesheet" href="../styles/quem-somos/missao_trabalho.css">
     <link rel="stylesheet" href="../styles/quem-somos/equipe.css">
+    <link rel="stylesheet" href="../styles/quem-somos/historia.css">
 
     <link rel="shortcut icon" type="imagex/svg" href="../assets/logo-cor3.svg">
     <title>Quem Somos | Núcleo Angela Martin Bassetto</title>
@@ -215,7 +216,35 @@
     </section>
 
     <section id="historia">
-        <h2>História</h2>
+        <div id="historia-titulo">
+            <h2>História</h2>
+            <img src="../assets/logo-texto-cor1.svg" alt="Núcleo Angela Martin Basseto">
+        </div>
+
+        <div id="historia-conteudo">
+            <div id="historia-texto">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
+                    anim id est laborum.Excepteur sint occaecat cupidatat non proident.
+                </p>
+            </div>
+            <div id="historia-imagens">
+                <img src="../assets/Imagem1-historia.svg" alt="Casa do Núcleo" class="historia-imagem-1">
+                <img src="../assets/Iamgem2-historia.svg" alt="Casa do Núcleo" class="historia-imagem-2">
+            </div>
+        </div>
+        
+        <div id="historia-localizacao">
+            <!--
+             <img src="../assets/Localização.svg" alt="Rua Capitão João Batista, n° 224, Bairro:
+            Centro - CEP: 18.660-026 - Pratânia - SP">
+            -->
+        </div>
     </section>
 
     <footer>
