--- a/pages/quem_somos.html
+++ b/pages/quem_somos.html
@@ -240,10 +240,15 @@
         </div>
         
         <div id="historia-localizacao">
-            <!--
-             <img src="../assets/Localização.svg" alt="Rua Capitão João Batista, n° 224, Bairro:
-            Centro - CEP: 18.660-026 - Pratânia - SP">
-            -->
+            <div class="card-localizacao">
+                <img src="../assets/icone-visitar.png" alt="Visitantes">
+                <h4>VENHA NOS VISITAR</h4>
+                <img src="../assets/icone-endereco.png" alt="Endereço">
+                <p>
+                    Rua Capitão João Batista, n° 224, Bairro:
+                    Centro - CEP: 18.660-026 - Pratânia - SP
+                </p>
+            </div>
         </div>
     </section>
 
