--- a/index.html
+++ b/index.html
@@ -63,19 +63,22 @@
 
     <!-- SEÇÃO HERO -->
     <section id="hero" class="secao">
-            <div>
-                <h1><span>NÚCLEO DE ATENDIMENTO SOCIAL</span></br><span>"Angela Martin Basseto"</span></h1>
-                <p>
-                    Intervenções pautadas em <strong>experiências lúdicas</strong>, <strong>culturais</strong> e <strong>esportivas</strong> como forma de <strong>expressão</strong>, <strong>interação</strong>,<strong> aprendizagem</strong>,<strong> sociabilidade</strong> e <strong>proteção social</strong>.
-                </p>
-                <a href="./pages/como_ajudar.html" class="botao-secundario">
-                    <button>
-                        QUERO AJUDAR!
-                    </button>
-                </a>
-                <img src="./assets/logo-cor1.svg"
-                    alt="uma flor com uma menina e um menino no lado esquerdo e um coração no canto superior direito">
-            </div>
+        <div>
+            <h1><span>NÚCLEO DE ATENDIMENTO SOCIAL</span></br><span>"Angela Martin Basseto"</span></h1>
+            <p>
+                Intervenções pautadas em <strong>experiências lúdicas</strong>, <strong>culturais</strong> e
+                <strong>esportivas</strong> como forma de <strong>expressão</strong>,
+                <strong>interação</strong>,<strong> aprendizagem</strong>,<strong> sociabilidade</strong> e
+                <strong>proteção social</strong>.
+            </p>
+            <a href="./pages/como_ajudar.html" class="botao-secundario">
+                <button>
+                    QUERO AJUDAR!
+                </button>
+            </a>
+            <img src="./assets/logo-cor1.svg"
+                alt="uma flor com uma menina e um menino no lado esquerdo e um coração no canto superior direito">
+        </div>
 
     </section>
 
@@ -162,6 +165,8 @@
                 </a>
             </div>
 
+        </div>
+        <div id="projetos-conteudo">
             <div>
                 <h3>Aniversariante do Mês</h3>
                 <p>
@@ -271,14 +276,41 @@
                 </a>
             </div>
         </div>
-
     </section>
 
-        <footer>
-            
-        </footer>
-
+    <footer>
+        <div id="logo-footer">
+            <img src="./assets/logo-texto-cor2.svg"
+                alt="uma flor com uma menina e um menino no lado esquerdo e um coração no canto superior direito">
+        </div>
+        <nav class="menu-footer">
+            <h3>Links rápidos</h3>
+            <ul>
+                <li>
+                    <a href="/" class="active">Home</a>
+                </li>
+                <li>
+                    <a href="./pages/quem_somos.html">Quem Somos</a>
+                </li>
+                <li>
+                    <a href="./pages/como_ajudar.html">Como Ajudar</a>
+                </li>
+                <li>
+                    <a href="./pages/transparencia.html">Transparência</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="info-footer">
+            <h3>Informações de contato:</h3>
+            <p>Rua Capitão João Batista, n 224</br> Bairro: Centro - CEP: 18.660-026 - Pratânia - SP</p>
+            <div class="social-logo">
+                <img src="./assets/icone-ig.svg" alt="logo do instagram">
+                <img src="./assets/icone-fb.svg" alt="logo do facebook">
+            </div>
+        </div>
+    </footer>
     <script src="scripts/header.js"></script>
+    <script src="scripts/footer.js"></script>
 </body>
 
 </html>
