--- a/pages/transparencia.html
+++ b/pages/transparencia.html
@@ -75,11 +75,38 @@
             </button>
         </a>
     </section>
-
     <footer>
-
+        <div id="logo-footer">
+            <img src="../assets/logo-texto-cor2.svg" alt="uma flor com uma menina e um menino no lado esquerdo e um coração no canto superior direito">
+        </div>
+        <nav class="menu-footer">
+            <h3>Links rápidos</h3>
+            <ul>
+                <li>
+                    <a href="/" class="active">Home</a>
+                </li>
+                <li>
+                    <a href="./pages/quem_somos.html">Quem Somos</a>
+                </li>
+                <li>
+                    <a href="./pages/como_ajudar.html">Como Ajudar</a>
+                </li>
+                <li>
+                    <a href="./pages/transparencia.html">Transparência</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="info-footer">
+            <h3>Informações de contato:</h3>
+            <p>Rua Capitão João Batista, n 224</br> Bairro: Centro - CEP: 18.660-026 - Pratânia - SP</p>
+            <div class="social-logo">
+                <img src="../assets/icone-ig.svg" alt="logo do instagram">
+                <img src="../assets/icone-fb.svg" alt="logo do facebook">
+            </div>
+        </div> 
     </footer>
 
     <script src="../scripts/header.js"></script>
+    <script src="../scripts/footer.js"></script>
 </body>
 </html>
