Revisão código: a laura é linda e o gui mais ainda

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
         <h2>Nossos Projetos</h2>
 
-        <div id="projetos-conteudo">
+        <div class="projetos-conteudo">
 
             <img src="./assets/projeto-colonia-de-ferias.svg" alt="projeto-colonia-de-ferias">
 
@@ -148,13 +148,13 @@
                 <h3>Colônia de Férias</h3>
 
                 <p>
-                    O Núcleo de Atendimento Social "Ângela Martin Bassetto" <br>
-                    realizou a "Colônia de Férias" durante o mês de janeiro. <br>
-                    A colônia ocorreu no período da tarde e foi destinada a todas <br>
-                    as crianças atendidas pelo serviço. Durante esse período, <br>
-                    foi oferecida uma alimentação saudável e diversificada, além de <br>
-                    uma programação com várias atividades recreativas para <br>
-                    que as crianças pudessem aproveitar o período de férias <br>
+                    O Núcleo de Atendimento Social "Ângela Martin Bassetto" 
+                    realizou a "Colônia de Férias" durante o mês de janeiro. 
+                    A colônia ocorreu no período da tarde e foi destinada a todas 
+                    as crianças atendidas pelo serviço. Durante esse período, 
+                    foi oferecida uma alimentação saudável e diversificada, além de 
+                    uma programação com várias atividades recreativas para 
+                    que as crianças pudessem aproveitar o período de férias 
                     escolares em um ambiente seguro e agradável.
                 </p>
 
@@ -166,14 +166,14 @@
             </div>
 
         </div>
-        <div id="projetos-conteudo">
+        <div class="projetos-conteudo">
             <div>
                 <h3>Aniversariante do Mês</h3>
                 <p>
-                    O projeto "Anivesariante do Mês" é uma iniciativa do Núcleo <br>
-                    de Atendimento Social "Ângela Martin Bassetto" com o <br>
-                    propósito de promover acolhimento para comemorar os <br>
-                    anivesariantes do mês. O objetivo principal é proporcionar <br>
+                    O projeto "Anivesariante do Mês" é uma iniciativa do Núcleo 
+                    de Atendimento Social "Ângela Martin Bassetto" com o 
+                    propósito de promover acolhimento para comemorar os 
+                    anivesariantes do mês. O objetivo principal é proporcionar 
                     um aniversário mais feliz e digno para aqueles que mais precisam.
                 </p>
 
