Como Ajudar | ajustes

--- a/pages/como_ajudar.html
+++ b/pages/como_ajudar.html
@@ -116,9 +116,10 @@
                 Saiba mais.</a>
 
                 <br>
-                Caso haja dúvidas, <a href="https://youtu.be/RDKe9ODRt4E" target="_blank">clique aqui</a> 
-                para assistir um vídeo sobre como doar nota fiscal as Organizações sem fins lucrativos
+                Caso haja dúvidas, assista um vídeo sobre como doar nota fiscal as Organizações sem fins lucrativos
             </p>
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/RDKe9ODRt4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
 
         <div id="doacoes-imposto-de-renda">
