--- a/pages/como_ajudar.html
+++ b/pages/como_ajudar.html
@@ -88,7 +88,7 @@
                     <img src="../assets/dados bancarios.svg" alt="Dados bancarios">
                 </li>
                 <li>
-                    <img src="../assets/imagem-doacoes.svg" alt="Sala com mesas e cadeiras">
+                    <img id="imagem" src="../assets/imagem-doacoes.svg" alt="Sala com mesas e cadeiras">
                 </li>
             </ul>
         </div>
@@ -118,11 +118,12 @@
                 <br>
                 Caso haja dúvidas, assista um vídeo sobre como doar nota fiscal as Organizações sem fins lucrativos
             </p>
-
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/RDKe9ODRt4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/RDKe9ODRt4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
         </div>
 
-        <div id="doacoes-imposto-de-renda">
+        <!-- <div id="doacoes-imposto-de-renda">
             <h4>
                 Doação de parte do Imposto de Renda - Saiba como fazer e como deduzir
             </h4>
@@ -144,14 +145,14 @@
                     Saiba mais
                 </a>
             </p>
-        </div>
+        </div> -->
     </section>    
 
     <section id="empresas-parceiras">
         <h2>Empresa parceira</h2>
         <div id="empresa-parceira-conteudo">
             <p>
-                text
+                Para se tornar uma valiosa parceira da nossa empresa, solicitamos que entre em contato conosco. Estamos ansiosos para discutir oportunidades de colaboração e como podemos trabalhar juntos de forma mutuamente benéfica. Aguardamos o seu contato!
             </p>
         </div>
     </section>
