--- a/pages/quem_somos.html
+++ b/pages/quem_somos.html
@@ -119,8 +119,7 @@
     <section id="equipe">
         <h2>Equipe</h2>
         <p>
-            Maecenas libero elit, euismod id eleifend sed, blandit a metus. Interdum et alesuada fames ac ante ipsum
-            primis in faucibus. Suspendisse eleifend eu justo id eleifend.
+            Unidos para fazer a diferença!
         </p>
 
         <div>
