Home: Parcerias - correção da lista de parceiros

--- a/index.html
+++ b/index.html
@@ -192,9 +192,6 @@
 
             <img src="assets/parceiros/Cerealista Trova LTDA.png" alt="Cerealista Trova LTDA">
 
-            <img src="assets/parceiros/Empresa Black Hawk Soluções e Inovações.png"
-                alt="Empresa Black Hawk Soluções e Inovações">
-
             <img src="assets/parceiros/Frutamil Comercio de Frutas e Sucos.png"
                 alt="Frutamil Comercio de Frutas e Sucos">
 
@@ -204,25 +201,18 @@
 
             <img src="assets/parceiros/Lar Anália Franco.png" alt="Lar Anália Franco">
 
+            <img src="assets/parceiros/Prata Hotel Express.png" alt="Prata Hotel Express">
+
             <img src="assets/parceiros/Química Santa Rita Eireli.png" alt="Química Santa Rita Eireli">
 
             <img src="assets/parceiros/Usina Açucareira São Manoel S.A..png" alt="Usina Açucareira São Manoel S.A.">
 
             <div class="card-parceiro">
-                Auto Posto Maicon Ltda
-            </div>
-
-            <div class="card-parceiro">
-                Fazenda Santo António de Palmares
-
+                Auto Posto Maion Ltda
             </div>
 
             <div class="card-parceiro">
                 Fazenda Condórde - Agropecuária Monte Alegrense LTDA
-            </div>
-
-            <div class="card-parceiro">
-                Auto Posto Maicon Ltda
             </div>
 
         </div>
