Corrigindo alt do link para o facebook

--- a/pages/como_ajudar.html
+++ b/pages/como_ajudar.html
@@ -61,7 +61,7 @@
 
         <p>
             Através de doações mensais você estará ajudando na manutenção do trabalho 
-            desenvolvido pelo Núcleo de Atendimento Social "Angela Martin Basseto". 
+            desenvolvido pelo Núcleo de Atendimento Social "Angela Martin Bassetto". 
             Sua doação poderá ser deduzida no imposto de renda.
         </p>
 
@@ -169,7 +169,7 @@
                 <li>WhatsApp | <strong>(14) 99174-8235</strong></li>
                 <li>
                     Facebook | <a href="https://www.facebook.com/nucleoangelamartin/" target="_blank">
-                    <strong>Núcleo Angela Martin</strong></a>
+                    <strong>Núcleo Angela Martin Bassetto</strong></a>
                 </li>
                 <li>
                     E-mail | <strong>crecheamb@prata.net.br</strong>
