Adicionando imagem em Como Ajudar Hero

--- a/pages/como_ajudar.html
+++ b/pages/como_ajudar.html
@@ -57,25 +57,32 @@
     </header>
 
     <section id="hero">
-        <h1>Como Ajudar?</h1>
-
-        <p>
-            Através de doações mensais você estará ajudando na manutenção do trabalho 
-            desenvolvido pelo Núcleo de Atendimento Social "Angela Martin Bassetto". 
-            Sua doação poderá ser deduzida no imposto de renda.
-        </p>
-
         <div>
-            <a href="#doacoes">
-                <button class="botao-contribuinte">
-                   Seja um sócio contribuinte!
-                </button>
-            </a>
-        
-            <a href="#empresas-parceiras" class="botao-secundario" id="button">
-                <button>
-                   Seja uma empresa parceira!
-                </button>
+            <h1>Como Ajudar?</h1>
+
+            <p>
+                Através de doações mensais você estará ajudando na manutenção do trabalho 
+                desenvolvido pelo Núcleo de Atendimento Social "Angela Martin Bassetto". 
+                Sua doação poderá ser deduzida no imposto de renda.
+            </p>
+
+            <div>
+                <a href="#doacoes">
+                    <button class="botao-contribuinte">
+                    Seja um sócio contribuinte!
+                    </button>
+                </a>
+            
+                <a href="#empresas-parceiras" class="botao-secundario" id="button">
+                    <button>
+                    Seja uma empresa parceira!
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div class="imagem">
+            <a href="https://storyset.com/people">
+                <img src="../assets/doacoes-apoio.svg" alt="Crianças Brincando">
             </a>
         </div>
     </section>
