Home: Hero - responsividade do h1

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- SEÇÃO HERO -->
     <section id="hero" class="secao">
         <div>
-            <h1><span id="sobtituloo">NÚCLEO DE ATENDIMENTO SOCIAL</span></br><span>"Angela Martin Basseto"</span></h1>
+            <h1><span>NÚCLEO DE ATENDIMENTO SOCIAL</span></br><span>"Angela Martin Basseto"</span></h1>
             <p>
                 Intervenções pautadas em <strong>experiências lúdicas</strong>, <strong>culturais</strong> e
                 <strong>esportivas</strong> como forma de <strong>expressão</strong>,
